infrastructure/nexus/nexus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  labels:
    app: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      nodeSelector:
        kubernetes.io/hostname: ubuntu-server-1
        kubernetes.io/os: linux
      securityContext:
        fsGroup: 200
      containers:
      - image: sonatype/nexus3:3.66.0
        imagePullPolicy: Always
        name: nexus
        ports:
        - containerPort: 8081
        - containerPort: 5000
        volumeMounts:
          - mountPath: /nexus-data
            name: nexus-data-volume
      volumes:
      - name: nexus-data-volume
        persistentVolumeClaim:
          claimName: nexus-pvc
