infrastructure/nexus/nexus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
spec:
  ports:
  - port: 80
    targetPort: 8081
    protocol: TCP
    name: http
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: docker
  selector:
    app: nexus
